@@ -3,6 +3,8 @@ TODO: Testing, testing ..
 V RF.01.41.18.Mod (2018-04-08) 
 - removed INCLUDE_DEBUG_COMMUNICATION
 - FEATURE_ABORT_PRINT_AFTER_TEMPERATURE_ERROR is mandatory and removed from configuration.h
+- removed INCLUDE_DEBUG_NO_MOVE
+- removed DEBUG_FORCE_COM_ERROR
 ...
 
 V RF.01.41.17.Mod (2018-04-02) 
